# cookiecutter-pycharm-remote-docker

./: .gitignore  README.ja.md  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .gitignore  CHANGELOG.md  README.md  _version.py  main.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_name}}/docker/: Dockerfile
{{cookiecutter.project_name}}/docs/: Makefile
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/tests/: test_example.py
