[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.__version__
;url =
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
;license =
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md

[options]
packages = find:

[tool:pytest]
testpaths=tests
addopts = --pdbcls=IPython.terminal.debugger:Pdb
ignore=tests